--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/quiz_app
+#spring.datasource.url=jdbc:mysql://localhost:3306/quiz_app
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12678583
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=root
+spring.datasource.username=sql12678583
+spring.datasource.password=n4RLwqz5jz
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
