Adding unit tests in workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,3 +32,14 @@ jobs:
            mysql -e 'CREATE DATABASE sql12678583' -u sql12678583 -p n4RLwqz5jz
     - name: Build Quiz App with Maven
       run: mvn clean install
+    - name: Test
+      run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+
+    - name: Report
+      uses: dorny/test-reporter@v1
+      if: always()
+      with:
+          name: Maven Tests
+          path: target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
